--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "use-document-visibility-hook-ts": "^0.0.9",
+    "use-media-query-hook-typescript": "^0.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
